fixtures/cs-hash-02/bad/inline-require-hash.js
function hashPassword(password) {
	return require("bcrypt").hash(password, 5);
}

module.exports = { hashPassword };
